kubo/exam.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exam
  labels:
    name: exam
