kubo/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: backend
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exam
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: aarrasse/exam:back
          ports:
            - containerPort: 5000
          livenessProbe: 
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 25
          readinessProbe: 
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 15
          startupProbe: 
            tcpSocket:
              port: 5000
            failureThreshold: 3
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
