kubo/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exam
spec:
  ports:
    - port: 80
      protocol: TCP

  selector:
    app: frontend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: exam
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: aarrasse/exam:front
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          livenessProbe: 
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 25
          readinessProbe: 
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe: 
            tcpSocket:
              port: 80
            failureThreshold: 3
            periodSeconds: 10
