kubo/ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
  name: ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: exam
   
spec:
  rules:
    - host: exam.info
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/users
   
            pathType: Prefix
   
            backend:
              service:
                name: backend
                port:
                  number: 5000
